home-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-back
  labels:
    app: home-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-back
  template:
    metadata:
      labels:
        app: home-back
    spec:
      containers:
        - name: home-back
          image: gelugu/home-back:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: home-back
spec:
  type: ClusterIP
  selector:
    app: home-back
  ports:
  - port: 8080
    targetPort: 8080
