home-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-cache
  labels:
    app: home-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-cache
  template:
    metadata:
      labels:
        app: home-cache
    spec:
      containers:
        - name: home-cache
          image: gelugu/cache:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: home-cache
spec:
  type: ClusterIP
  selector:
    app: home-cache
  ports:
  - port: 3000
    targetPort: 3000
