home-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-front
  labels:
    app: home-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-front
  template:
    metadata:
      labels:
        app: home-front
    spec:
      containers:
        - name: home-front
          image: gelugu/home-web:1.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: home-front
spec:
  type: ClusterIP
  selector:
    app: home-front
  ports:
  - port: 80
    targetPort: 80
