monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - metrics.gelugu.com
      secretName: monitoring-tls
  rules:
    - host: metrics.gelugu.com
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
